crates/vexor-compiler/tests/golden/error/output/match_duplicate.err
Error: evaluation error
   ╭─[ input:4:7 ]
   │
 4 │   x : x : tail => x * x
   │       ─┬  
   │        ╰── `x` already exists in scope
───╯
